# minilog

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
docs/: CONTEXT-for-new-chat.md  calculator-explained.md  euclidean-geometry-from-axioms.md  evolution-production-rules-explained.md  geometry-triangles-explained.md  knowledge-base-and-proof-theory-STRUCTURE.md  language-reference.md  prolog-engine-explained.md  prolog-state-2025.md  text-extraction.md
examples/: arithmetic_demo.expected.txt  arithmetic_demo.ml  biology.expected.txt  biology.ml  biology_evolution.expected.txt  biology_evolution.ml  calculator.expected.txt  calculator.ml  causality.expected.txt  causality.ml  directions.expected.txt  directions.ml  dwh_dependencies.expected.txt  dwh_dependencies.ml  euclidean_geometry.expected.txt  euclidean_geometry.ml  evolution_aging.expected.txt  evolution_aging.ml  family.expected.txt  family.ml  geometry_triangles.expected.txt  geometry_triangles.ml  graph_coloring.expected.txt  graph_coloring.ml  hamiltonian_path.expected.txt  hamiltonian_path.ml  mythology.expected.txt  mythology.ml  recipes.expected.txt  recipes.ml  school_schedule.expected.txt  school_schedule.ml  terra_tacita.expected.txt  terra_tacita.ml  unit_conversion.expected.txt  unit_conversion.ml
minilog/: __init__.py  cli.py  engine.py  errors.py  evaluator.py  evolution.py  forward.py  kb.py  lexer.py  parser.py  repl.py  terms.py  tracer.py  unify.py
specification/: github-issues.md  migvisor-axioms-architecture.md  minilog-overview.md  minilog-stage1-spec.md  (+4 more)
(+52 files in other folders)
